--- a/Assets/Package/package.json
+++ b/Assets/Package/package.json
@@ -1,17 +1,12 @@
 {
-  "name": "com.ubisoft.magnum.batching",
-  "version": "0.1.0",
-  "displayName": "Magnum.Batching",
-  "description": "Magnum Batching",
-  "unity": "2019.4",  
-  "author": {
-    "name": "",
-    "email": "",
-    "url": ""
-  },
-  "dependencies": 
-  {
-	"com.unity.render-pipelines.core": "7.3.1",
-    "com.unity.render-pipelines.universal": "file:../../../ThirdParty/com.unity.render-pipelines.universal"  
-  }
+	"name": "com.ingames.coreframework",
+	"version": "0.1.0",
+	"displayName": "Ingames.Coreframework",
+	"description": "Ingames.Coreframework",
+	"unity": "2019.4",
+	"author": {
+		"name": "inGames",
+		"email": "",
+		"url": ""
+	}
 }
